<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardBackgroundColor="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_rectangle_add_comment"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary_bg"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/any_spacial_requests"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xsmall"
            app:fontPath="fonts/Ubuntu-Medium.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_gray_border_rectangle"
                android:gravity="start"
                android:hint="@string/write_here"
                android:lines="4"
                android:maxHeight="@dimen/_80sdp"
                android:padding="@dimen/_5sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_10sdp">

            <RadioButton
                android:id="@+id/radio_cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/cod"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pay_via_card"
                android:textColor="@color/black"
                app:buttonTint="@color/colorPrimary" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_transparnt_red_border"
            android:gravity="center"

            android:paddingStart="@dimen/_50sdp"
            android:paddingEnd="@dimen/_50sdp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</android.support.v7.widget.CardView>