<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sidemenu_background"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/ll_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"


        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/century_normal"
            android:gravity="center"
            android:text="@string/view_profile"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/century_normal"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/ll_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/century_normal"
            android:gravity="center"
            android:text="@string/change_pass"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/ll_change_langauge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_language_side_menu"
            android:fontFamily="@font/century_normal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/ll_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/help"
            android:fontFamily="@font/century_normal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/ll_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/century_normal"
            android:text="@string/about_us"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>



    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/ll_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/contact_us"
            android:fontFamily="@font/century_normal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:visibility="visible"
        android:background="@color/white"
        android:gravity="center"
        android:id="@+id/ll_logout"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:visibility="gone"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_logout_update" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/logout"
            android:fontFamily="@font/century_normal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>