<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_rectangle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:text="@string/logout_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xsmall"
            app:fontPath="fonts/Ubuntu-Light.ttf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noBtn"
                android:layout_width="0dp"
                android:layout_height="40dp"

                android:layout_weight="1"
                android:background="@drawable/rounded_white_rectangle"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xsmall"
                app:fontPath="fonts/Ubuntu-Light.ttf" />

            <View
                android:layout_width="1px"
                android:layout_height="40dp"
                android:background="@color/gray1" />

            <TextView
                android:id="@+id/yesBtn"
                android:layout_width="0dp"
                android:layout_height="40dp"

                android:layout_weight="1"
                android:background="@drawable/rounded_white_rectangle"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_xsmall"
                app:fontPath="fonts/Ubuntu-Light.ttf" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>